OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c.object
<CustomObject>
    <description>Stores external credentials/certifications for Contacts, tracking credential types, status, expiration dates, and unique identifiers. Used to validate credential requirements during onboarding and can sync into Training_Assignment__c records. Example: Contact "John Doe" might have a POE_External_Contact_Credential record with External_Contact_Credential_Type__c="OSHA 10 Certification", Status__c="Active", Expiration_Date__c set to the credential expiration, and Unique_Key__c auto-generated to prevent duplicates. When a Vendor Program requires "OSHA 10 Certification" as specified in Required_External_Contact_Credential__c, the system validates that John has an active credential of this type. Credentials can be created manually or synced from external systems, and they serve as proof of training/compliance for onboarding requirements.</description>
    <label>External Contact Credential</label>
    <nameField>
        <displayFormat>ECC-{0000000}</displayFormat>
        <label>External Contact Credential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Contact Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>