OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/POE_Code__c.field-meta.xml
<CustomField>
    <fullName>POE_Code__c</fullName>
    <description>(PER-2126)</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>