OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/POE_Contact__c.field-meta.xml
<CustomField>
    <fullName>POE_Contact__c</fullName>
    <description>Contact for the credentials. (PER-2126)</description>
    <inlineHelpText>Contact for the credentials.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>External Contact Credentials</relationshipLabel>
    <relationshipName>External_Contact_Credentials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>