OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/POE_N_Number__c.field-meta.xml
<CustomField>
    <fullName>POE_N_Number__c</fullName>
    <label>N Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>