OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/POE_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>POE_Process_Status__c</fullName>
    <description>(PER-2126)</description>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Training Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>