OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/POE_Program__c.field-meta.xml
<CustomField>
    <fullName>POE_Program__c</fullName>
    <description>Program for which this credential is related to. (PER-2126)</description>
    <inlineHelpText>Program for which this credential is related to.</inlineHelpText>
    <label>Program</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Telogix</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Verizon Fios D2D</fullName>
            </value>
            <value>
                <fullName>Verizon Residential</fullName>
            </value>
            <value>
                <fullName>Windstream D2D</fullName>
            </value>
            <value>
                <fullName>Xfinity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>