OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/POE_Username__c.field-meta.xml
<CustomField>
    <fullName>POE_Username__c</fullName>
    <description>System Username. (PER-2126)</description>
    <inlineHelpText>System Username.</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>