OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/Training_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Training_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training_Requirement</label>
    <referenceTo>Training_Requirement__c</referenceTo>
    <relationshipLabel>External Contact Credentials</relationshipLabel>
    <relationshipName>External_Contact_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>