OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/Training_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Sent_Date__c</fullName>
    <label>Training Sent Date</label>
    <type>Date</type>
</CustomField>