OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>External Contact Credentials</relationshipLabel>
    <relationshipName>External_Contact_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>