OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Vendor Program (Vendor_Customization__c) this credential is scoped to.</description>
    <inlineHelpText>Vendor Program this credential applies to.</inlineHelpText>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>External Contact Credentials</relationshipLabel>
    <relationshipName>External_Contact_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>