OnboardingV2Minimal/force-app/main/default/objects/POE_External_Contact_Credential__c/fields/Verizon_Market__c.field-meta.xml
<CustomField>
    <fullName>Verizon_Market__c</fullName>
    <description>Verizon Market [PER-3208]</description>
    <label>Verizon Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>